--- a/src/component/cart.css
+++ b/src/component/cart.css
@@ -3,6 +3,43 @@ div.cart{
 }
 
 div.cart button{
-    width: 3.5rem;
+    width: 3rem;
     height: 1.5rem;
+}
+li button.remove{
+    width: fit-content;
+}
+img.cart-image{
+    max-width: 250px;
+    height: 175px;
+    margin-left: 0;
+    flex: 3;
+}
+ul{
+    align-content: center;
+    flex: 2;
+}
+li{
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    margin-top: 10px;
+}
+label{
+    flex: 2;
+}
+h4{
+    flex: 3;
+}
+h5{
+    flex: 2;
+}
+div.cart-main{
+    display: flex;
+    flex-direction: row;
+}
+div.add-on{
+    flex: 1;
 }
