module 110 competency report

--- a/src/component/catalog.css
+++ b/src/component/catalog.css
@@ -1,3 +1,11 @@
 .catalog h2 {
   color: cadetblue;
 }
+div.catalog_product{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+Product{
+  width: 275px;
+}
